test/runnable/testmain.d
// REQUIRED_ARGS: -main
// PERMUTE_ARGS: -version=AddMain

void foo() {}

version (AddMain) void main() {}
