test/fail_compilation/fail189.d
void bar ()
{
        foo (); // should fail
}

version(none):
void foo () {}

